--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "programming-thoughts",
+    "name": "bridge-crm",
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
